# ML-courses

./: pyproject.toml
course_1/week_2/: approk.py  sentences.py
course_1/week_3/: differential_optimization.py  minimization.py  optimization.py
course_1/week_4/: CLT.py
