[tool.poetry]
name = "ml-courses"
version = "0.1.0"
description = ""
authors = ["YoungBlackWitch <petrenko.valeri82@gmail.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<3.11"
pandas = "^1.4.0"
scipy = "^1.7.3"
numpy = "^1.22.1"
matplotlib = "^3.5.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
